# NodeContraction

./: .gitignore  Project.toml  approx_mean_cov.txt  approximate_mean_cov.jl  bayes_optim.jl  bayes_sir_turing_spec.jl  bayesopt_results.json  contraction.jl  data.json  demo.jl  gausslaguerre.jl  nnfused.jl  nuts_sir.jl  pydata.json  rxinfer_results.json  rxinfer_results_lrs.json  sliced_sir.jl  turing_lss.jl
numpyro_experiments/: bayes_optim.py  pyproject.toml
pytorch experiments/: train_model.py  train_rxinfer_lrs.py
sir_model/: bayes_sir_turing_spec.jl  nuts_sir.jl  rxinfer_ode_solve.jl
