[tool.poetry]
name = "nodecontraction"
version = "0.1.0"
description = ""
authors = ["Mykola Lukashchuk <nikola.lukashuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpyro = "^0.15.2"
torch = "^2.4.0"
jax = "^0.4.31"
flax = "^0.8.5"
tensorflow = "^2.17.0"
keras = "^3.5.0"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
